# kestrel

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: lib.rs
crates/consensus/tests/: kestrel_bft.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/benches/: signatures.rs
crates/crypto/src/: lib.rs
crates/execution/: Cargo.toml  README.md
crates/execution/benches/: parallel_scaling.rs
crates/execution/src/: lib.rs
crates/execution/tests/: deferred_execution.rs  loom_deferred.rs  loom_scheduler.rs  parallel_equivalence.rs  realistic_move_equivalence.rs  resurrection_execution.rs
crates/mempool/: Cargo.toml  README.md
crates/mempool/benches/: localized_fee_market.rs
crates/mempool/src/: lib.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: kestrel_cast.rs  lib.rs  service.rs
crates/node/: Cargo.toml  README.md
crates/node/examples/: measure_finality.rs  measure_steady_state.rs  measure_tps.rs  profile_pipeline.rs
crates/node/src/: coordinator.rs  lib.rs  lifecycle.rs  main.rs  pipeline.rs
crates/node/tests/: block_lifecycle.rs  stage2_node_rpc_integration.rs  stage2_pipeline_integration.rs  stage_2_processes.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs
crates/state/: Cargo.toml  README.md
crates/state/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: lib.rs
crates/testkit/: Cargo.toml  README.md
crates/testkit/benches/: finality.rs  propagation.rs
crates/testkit/examples/: phase_3_report.rs  phase_4_report.rs  phase_6_report.rs
crates/testkit/src/: chaos.rs  consensus_sim.rs  lib.rs
crates/testkit/tests/: consensus_faults.rs  phase_3_propagation.rs
crates/types/: Cargo.toml  README.md
crates/types/benches/: hashing.rs
crates/types/src/: lib.rs
crates/vm-evm/: Cargo.toml  README.md
crates/vm-evm/src/: lib.rs
crates/vm-move/: Cargo.toml  README.md
crates/vm-move/src/: lib.rs
crates/vm-move/tests/fixtures/: token.move
docs/: TECH_DEBT.md  consensus-spec.md  engineering-build-spec.md  evm-spec.md  execution-spec.md  mempool-spec.md  networking-spec.md  phase-0-status.md  phase-1-status.md  phase-2-absolute-throughput-noise.md  phase-2-benchmark-reproducibility.md  phase-2-status.md  phase-3-status.md  phase-4-status.md  phase-5-status.md  phase-6-status.md  state-spec.md  testnet-operations.md
scripts/: benchmark-reproducibility.sh  compare-benchmark-noise.py  devnet-up.sh  summarize-benchmark-repro.py
testnets/configs/: README.md
testnets/local/: README.md
