[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
repository = "https://github.com/ned/kestrel"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
bcs = "0.1"
blake3 = "1.8"
blst = "0.3.16"
criterion = { version = "0.7", features = ["html_reports"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures = "0.3.33"
hex = "0.4"
libp2p = { version = "0.56.0", default-features = false, features = ["cbor", "gossipsub", "identify", "macros", "mdns", "noise", "request-response", "tcp", "tokio", "yamux"] }
loom = "0.7"
move-binary-format = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c" }
move-compiler = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c", features = ["address32"] }
move-core-types = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c", features = ["address32"] }
move-vm-runtime = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c" }
move-vm-test-utils = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c" }
move-vm-types = { git = "https://github.com/move-language/move.git", rev = "c453c90994cba0af30314fe4134acee57fb20d0c" }
proptest = "1.7"
rand = "0.8"
rayon = "1.11"
reed-solomon-erasure = "6.0"
revm = { version = "36.0.0", default-features = false, features = ["std"] }
rocksdb = { version = "0.24", default-features = false, features = ["lz4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.53", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
types = { path = "crates/types" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
