[package]
name = "cli"
description = "Kestrel wallet and operator command-line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
consensus = { path = "../consensus" }
crypto = { path = "../crypto" }
hex.workspace = true
libp2p.workspace = true
node = { path = "../node" }
rand.workspace = true
serde_json.workspace = true
state = { path = "../state" }
types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
