[package]
name = "consensus"
description = "Kestrel-BFT ordering, leader election, voting, finality paths, and view changes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crypto = { path = "../crypto" }
serde.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
bcs.workspace = true

[lints]
workspace = true
