[package]
name = "crypto"
description = "Crypto-agile signatures and registry for Kestrel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blst.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "signatures"
harness = false

[lints]
workspace = true
