[package]
name = "mempool"
description = "Transaction ingestion, localized fee ordering, and application sequencing hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "localized_fee_market"
harness = false

[lints]
workspace = true
