[package]
name = "rpc"
description = "Client-facing JSON-RPC and gRPC APIs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
state = { path = "../state" }
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
types.workspace = true

[dev-dependencies]
tower.workspace = true

[lints]
workspace = true
