[package]
name = "state"
description = "Merkle state, storage rent, expiry, and witness handling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bcs.workspace = true
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
