[package]
name = "types"
description = "Shared protocol value types for Kestrel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
hex.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "hashing"
harness = false

[lints]
workspace = true

