[package]
name = "vm-evm"
description = "Co-resident EVM execution and native-object precompiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
revm.workspace = true
state = { path = "../state" }
thiserror.workspace = true
types.workspace = true

[dev-dependencies]
execution = { path = "../execution" }
move-binary-format.workspace = true
move-compiler.workspace = true
tempfile.workspace = true
vm-move = { path = "../vm-move" }

[lints]
workspace = true
